--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,27 @@
 
+body {
+	background-image: url(images/background.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 100vh;
+	overflow: hidden;
+	background-position: 50% 50%;
+}
+
 .speech {
 	font-family: 'Shadows Into Light', cursive;
 	letter-spacing: 1.5px;
+	background-color: rgba(255, 255, 255, 0.85);
+	width: 90vw;
+	padding: 15px;
+	border-radius: 2px;
+	margin: auto;
 }
+
+
+
+
+
+
+
+
