--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-	background-image: url(images/background.jpg);
+	background-image: url(../images/background.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100vh;
