--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,11 +21,32 @@ body {
 .hinge {
 	font-weight: bold;
 	color: #FF0000;
+	position: relative;
 }
 
 .hinge:hover {
 	text-decoration: underline;
 }
+
+.links {
+	position: absolute;
+    left: 0;
+    background-color: #000;
+    padding: 5px;
+    border-radius: 5px;
+    color: #fff;
+}
+
+.links:before {
+	content: '';
+    position: absolute;
+    top: -5px;
+    right: calc(50% - 10px);
+    border-width: 0 10px 10px;
+    border-color: #000000 transparent;
+    border-style: solid;
+}
+
 
 
 
