Fix body styling, update h1 style and font.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,13 +3,16 @@ body {
 	background-image: url(../images/background.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 100vh;
-	overflow: hidden;
+	overflow-x: hidden;
 	background-position: 50% 50%;
+	background-attachment: fixed;
 }
 
 h1 {
 	text-align: center;
+	font-family: 'Pacifico', cursive;
+	font-size: 45px;
+	text-shadow: 0 0 2px #fff;
 }
 
 .speech {
